--- a/project/app/src/main/AndroidManifest.xml
+++ b/project/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
     </application>
 
-    <uses-feature android:name="android.hardware.sensor.gyroscope"
-                  android:required="true" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+	<uses-permission android:name = "android.permission.WRITE_EXTERNAL_STORAGE" />
+	
 </manifest>
